fixed button alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ footer a {
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
-    max-width: 90%;
+    max-width: 30%;
     margin: auto;
 }
 
